Always show toggle, even for narrow cards. Add hide_state: false option. Fix #124, Fix #128

--- a/test/views/4_width.yaml
+++ b/test/views/4_width.yaml
@@ -12,6 +12,8 @@ cards:
             type: custom:slider-entity-row
             entity: light.bed_light
           - <<: *row
+            hide_state: false
+          - <<: *row
             toggle: true
           - <<: *row
             hide_state: true
