Better error handling. Fix #132

--- a/test/configuration.yaml
+++ b/test/configuration.yaml
@@ -3,7 +3,7 @@ default_config:
 demo:
 
 lovelace:
-  mode: yaml
+  mode: storage
   resources:
     - url: /local/slider-entity-row.js
       type: module
