--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "slider-entity-row",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0b1",
   "description": "slider-entity-row =================",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch --mode=development",
+    "build": "rollup -c",
+    "watch": "rollup -c --watch",
     "update-card-tools": "npm uninstall card-tools && npm install thomasloven/lovelace-card-tools"
   },
   "repository": {
@@ -16,10 +16,17 @@
   "author": "Thomas Lovén",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "@babel/core": "^7.13.1",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "rollup": "^2.39.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
-    "card-tools": "github:thomasloven/lovelace-card-tools"
+    "card-tools": "github:thomasloven/lovelace-card-tools",
+    "lit-element": "^2.4.0"
   }
 }
