Add support for number. Fix #172

--- a/test/views/1_types.yaml
+++ b/test/views/1_types.yaml
@@ -55,3 +55,6 @@ cards:
           - type: custom:slider-entity-row
             entity: input_select.select
             name: input_select
+          - type: custom:slider-entity-row
+            entity: number.pwm_1
+            name: number
