--- a/test/views/2_options.yaml
+++ b/test/views/2_options.yaml
@@ -40,6 +40,9 @@ cards:
             name: hide_when_off
             hide_when_off: true
           - <<: *default
+            name: hide_when_off + hide_state
+            hide_when_off: true
+          - <<: *default
             name: hide_when_off + toggle
             hide_when_off: true
             toggle: true
@@ -63,6 +66,9 @@ cards:
             type: custom:slider-entity-row
             entity: light.bed_light
           - <<: *default
+            name: grow
+            grow: true
+          - <<: *default
             name: toggle
             toggle: true
           - <<: *default
@@ -71,6 +77,10 @@ cards:
           - <<: *default
             name: hide_when_off
             hide_when_off: true
+          - <<: *default
+            name: hide_when_off + hide_state
+            hide_when_off: true
+            hide_state: true
           - <<: *default
             name: hide_when_off + toggle
             hide_when_off: true
