--- a/test/views/4_width.yaml
+++ b/test/views/4_width.yaml
@@ -11,12 +11,19 @@ cards:
           - &row
             type: custom:slider-entity-row
             entity: light.bed_light
+            name: Default
           - <<: *row
             hide_state: false
+            name: "!Hide state"
           - <<: *row
             toggle: true
+            name: Toggle
+          - <<: *row
+            grow: true
+            name: Grow
           - <<: *row
             hide_state: true
+            name: Hide state
           - <<: *row
             full_row: true
           - <<: *row
