--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "lit": "^2.1.2",
     "rollup": "^2.66.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
@@ -27,7 +28,6 @@
   },
   "dependencies": {
     "card-tools": "github:thomasloven/lovelace-card-tools",
-    "lit-element": "^3.1.2",
     "tslib": "^2.3.1"
   }
 }
