--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "slider-entity-row",
   "private": true,
-  "version": "17.2.1",
+  "version": "17.3.0",
+  "type": "module",
   "description": "slider-entity-row =================",
   "scripts": {
     "build": "rollup -c",
@@ -16,18 +17,18 @@
   "author": "Thomas Lovén",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "rollup": "^2.58.3",
+    "@babel/core": "^7.20.7",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "rollup": "^3.8.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.4.4"
+    "rollup-plugin-typescript2": "^0.34.1",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "card-tools": "github:thomasloven/lovelace-card-tools",
-    "lit": "^2.2.2",
-    "tslib": "^2.3.1"
+    "lit": "^2.5.0",
+    "tslib": "^2.4.1"
   }
 }
