--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "slider-entity-row",
   "private": true,
-  "version": "17.4.1",
+  "version": "17.5.0",
   "type": "module",
   "description": "slider-entity-row =================",
   "scripts": {
     "build": "rollup -c",
-    "watch": "rollup -c --watch",
-    "update-card-tools": "npm uninstall card-tools && npm install thomasloven/lovelace-card-tools"
+    "watch": "rollup -c --watch"
   },
   "repository": {
     "type": "git",
@@ -17,18 +16,16 @@
   "author": "Thomas Lovén",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "rollup": "^2.79.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.37.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
-    "lit": "^3.1.0",
-    "tslib": "^2.6.2"
+    "@babel/preset-env": "^7.26.9",
+    "lit": "^3.2.1"
   }
 }
